--- a/languages/wprsrv-fi.po
+++ b/languages/wprsrv-fi.po
@@ -3,11 +3,13 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wprsrv\n"
+"POT-Creation-Date: \n"
+"PO-Revision-Date: 2015-12-07 14:29+0200\n"
+"Last-Translator: Otto Rask <otto.rask@aucor.fi>\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2015-12-04 13:22+0200\n"
-"Last-Translator: Otto Rask <otto.rask@aucor.fi>\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
@@ -15,8 +17,6 @@ msgstr ""
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"POT-Creation-Date: \n"
-"Language-Team: \n"
 "X-Generator: Poedit 1.5.4\n"
 "X-Poedit-SearchPath-0: .\n"
 
@@ -95,10 +95,14 @@ msgctxt "calendar placeholder"
 msgid "To ..."
 msgstr "Loppuu ..."
 
+#: classes/Forms/Fields/CalendarField.php:25
+msgid "Format using YYYY-MM-DD"
+msgstr "Käytä VVVV-KK-PP -formaattia."
+
 #: classes/Forms/Fields/CalendarStartField.php:25
 msgctxt "calendar placeholder"
 msgid "From ..."
-msgstr "Alkaa ..."
+msgstr "Alkaen ..."
 
 #: classes/Forms/ReservationForm.php:121
 msgctxt "reservation form honeypot failure"
@@ -385,10 +389,10 @@ msgid "Pending reservation"
 msgstr "Odottava varaus"
 
 #: classes/PostTypes/Reservation.php:327
-msgid "Pending reservations <span class=\"count\">(%s)</span>"
-msgid_plural "Pending reservations <span class=\"count\">(%s)</span>"
-msgstr[0] "Odottavat varaukset <span class=\"count\">(%s)</span>"
-msgstr[1] "Odottavat varaukset <span class=\"count\">(%s)</span>"
+msgid "Pending reservations <span class='count'>(%s)</span>"
+msgid_plural "Pending reservations <span class='count'>(%s)</span>"
+msgstr[0] "Odottavat varaukset <span class='count'>(%s)</span>"
+msgstr[1] "Odottavat varaukset <span class='count'>(%s)</span>"
 
 #: classes/PostTypes/Reservation.php:332
 msgctxt "post status"
@@ -396,10 +400,10 @@ msgid "Accepted reservation"
 msgstr "Hyväksytty varaus"
 
 #: classes/PostTypes/Reservation.php:337
-msgid "Accepted reservations <span class=\"count\">(%s)</span>"
-msgid_plural "Accepted reservations <span class=\"count\">(%s)</span>"
-msgstr[0] "Hyväksytyt varaukset <span class=\"count\">(%s)</span>"
-msgstr[1] "Hyväksytyt varaukset <span class=\"count\">(%s)</span>"
+msgid "Accepted reservations <span class='count'>(%s)</span>"
+msgid_plural "Accepted reservations <span class='count'>(%s)</span>"
+msgstr[0] "Hyväksytyt varaukset <span class='count'>(%s)</span>"
+msgstr[1] "Hyväksytyt varaukset <span class='count'>(%s)</span>"
 
 #: classes/PostTypes/Reservation.php:342
 msgctxt "post status"
@@ -407,10 +411,10 @@ msgid "Declined reservation"
 msgstr "Hylätty varaus"
 
 #: classes/PostTypes/Reservation.php:347
-msgid "Declined reservations <span class=\"count\">(%s)</span>"
-msgid_plural "Declined reservations <span class=\"count\">(%s)</span>"
-msgstr[0] "Hylätyt varaukset <span class=\"count\">(%s)</span>"
-msgstr[1] "Hylätyt varaukset <span class=\"count\">(%s)</span>"
+msgid "Declined reservations <span class='count'>(%s)</span>"
+msgid_plural "Declined reservations <span class='count'>(%s)</span>"
+msgstr[0] "Hylätyt varaukset <span class='count'>(%s)</span>"
+msgstr[1] "Hylätyt varaukset <span class='count'>(%s)</span>"
 
 #: classes/PostTypes/Reservation.php:457
 msgctxt "note content for new pending reservation"
@@ -679,3 +683,13 @@ msgstr "Muistiinpano, %s"
 msgctxt "reservation filters"
 msgid "All reservables"
 msgstr "Kaikki varauskohteet"
+
+#: includes/templates/frontend/reservation-form.php:8
+msgctxt "reservation frontend form"
+msgid "Make a reservation"
+msgstr "Tee varaus"
+
+#: includes/templates/frontend/reservation-form.php:24
+msgctxt "reservation frontend form"
+msgid "Submit reservation"
+msgstr "Lähetä varaus"
